kubernetes/apps/observability/exporters/blackbox-exporter/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blackbox-exporter
  namespace: observability
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: https-56kbps
  hostnames:
    - "blackbox.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: blackbox-exporter
          port: 9115
